Fix footer on IE6

--- a/pages/assets/style.css
+++ b/pages/assets/style.css
@@ -37,6 +37,7 @@ A:hover { text-decoration: underline; }
 
 .reply-preview { width: 300px; }
 
+.credits { text-align: left; }
 .credits SPAN { font-weight: bold; }
 
 .pagesel { float: left; margin: 0px; }
